TETRAP-3328 - Fixed collapse animation

--- a/tetrapak-commons/ui.dev/src/source/styles/global/common/_utils.scss
+++ b/tetrapak-commons/ui.dev/src/source/styles/global/common/_utils.scss
@@ -22,7 +22,7 @@
     &.fade {
         .modal-dialog {
             transition: transform $anim-speed-quick $anim-ease-out;
-            transform: scale(0.9);
+            transform: scale(0.8);
         }
     }
 
@@ -41,4 +41,8 @@
             transition: none;
         }
     }
+}
+
+.collapsing {
+    transition: height $anim-speed-quick $anim-ease-out;
 }
